@@ -1,5 +1,11 @@
 2017-04-27  Jean Delvare  <jdelvare@suse.de>
 
+	Update to support SMBIOS specification version 3.1.1.
+
+	* dmidecode.c: Add support for 3-digit versions.
+
+2017-04-27  Jean Delvare  <jdelvare@suse.de>
+
 	Update to support SMBIOS specification version 3.1.0.
 
 	* dmidecode.c: Add support for extended BIOS ROM size (DMI type 0).
